--- a/spec/support/api/schemas/tasks.json
+++ b/spec/support/api/schemas/tasks.json
@@ -6,7 +6,7 @@
       "name": { "type": "string" },
       "project_id": { "type": "integer" },
       "done": { "type": "boolean" },
-      "deadline": { "type": "datetime" },
+      "deadline": { "type": "string" },
       "position": { "type": "integer" },
       "created_at": { "type": "string", "format": "date-time" },
       "updated_at": { "type": "string", "format": "date-time" }
