--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,8 +11,8 @@ amazon:
   service: S3
   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: eu-west-2
-  bucket: todo-captainjns
+  region: <%= Constants::AMAZON_REGION %>
+  bucket: <%= Constants::AMAZON_BUCKET %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
